# regime-conditioned-equity-ml

./: .gitignore  README.md  pyproject.toml
configs/: README.md
configs/data/: regime_universe.yaml
notebooks/: 01_data_exploration.ipynb  02_feature_development.ipynb  03_regime_analysis.ipynb
scripts/: test_transform_parser.py
src/: __init__.py
src/regime-ml/: __init__.py
src/regime-ml/features/: __init__.py  features.ipynb
src/regime_conditioned_equity_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/regime_ml/: __init__.py
src/regime_ml/data/: __init__.py  cleaners.py  loaders.py  pipeline.py  selectors.py  series_selectors.py  validators.py
src/regime_ml/data/common/: __init__.py  calendar.py  loaders.py
src/regime_ml/data/equity/: __init__.py
src/regime_ml/data/macro/: __init__.py  alignment.py  build_featuregroup_map.py  cleaners.py  loaders.py  pipeline.py  selector.py  validators.py
src/regime_ml/features/: __init__.py  moving_average.py  z_score.py
src/regime_ml/features/common/: transform_parser.py
src/regime_ml/features/common/transforms/: __init__.py  base.py  registry.py  statistical.py  temporal.py
src/regime_ml/features/macro/: __init__.py  pipeline.py  selection.py  validator.py
src/regime_ml/regimes/: __init__.py  base.py  evaluation.py  evaluation_plan.md  hmm.py  labeling.py  selection.py  visualisation.py
src/regime_ml/utils/: __init__.py  config.py
